syntax = "proto3";

option go_package = "github.com/openebs/mayastor-api/protobuf/v1";

package mayastor.v1;

// Protocol over which the bdev/replica/nexus etc will be shared.
enum ShareProtocol {
  NONE = 0; // not exposed
  NVMF = 1; // NVMe over Fabrics (TCP)
  ISCSI = 2; // iSCSI
}
